// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Website actions Should set initial state 1`] = `
Object {
  "payload": Object {},
  "type": "@@MT/EVENTS/WEBSITE_BLOCK/SET_INITIAL_STATE",
}
`;

exports[`[STORE] - Website actions Should set the website URL 1`] = `
Object {
  "payload": Object {
    "url": "https://tri.be/",
  },
  "type": "@@MT/EVENTS/SET_WEBSITE_URL",
}
`;

exports[`[STORE] - Website actions Should set the website label 1`] = `
Object {
  "payload": Object {
    "label": "Modern Tribe",
  },
  "type": "@@MT/EVENTS/SET_WEBSITE_LABEL",
}
`;
